[package]
name = "angled-random-walker"
description = "Angled Random Walker approach to Brownian tree generation."
version = "0.4.1"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/bharadwaj-raju/angled-random-walker"

[dependencies]
rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
rand_xoshiro = "0.6.0"

